--- a/SumuladorAlgoritmos/mainwindow.ui
+++ b/SumuladorAlgoritmos/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="boton_fifo">
     <property name="geometry">
      <rect>
       <x>200</x>
